--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -1212,7 +1212,7 @@ input {
     }
 }
 
-/*------------------------------------------- MANAGE DSL DEFINITION --------------------------------------------------------------*/
+/*------------------------------------------- MANAGE DSL DEFINITION, EXTERNAL DATABASES --------------------------------------------------------------*/
 #table-top {
     margin-left: 5em;
     margin-right: 5em;
