--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -1226,12 +1226,13 @@ input {
 #filter-type {
     float: left;
     font-size: 1.5em;
-    width: 6em;
+    width: 7em;
     text-align: left;
 }
 
 #top-buttons {
     float: right;
+    margin-right: -2em;
 }
 
 #top-buttons i {
@@ -1241,6 +1242,7 @@ input {
     margin-left: 0.5em;
     margin-right: 0.5em;
     cursor: pointer;
+    padding: 0 !important;
 }
 
 #top-buttons i:hover {
@@ -1512,39 +1514,29 @@ input {
 
 /*------------------------------------------------ EXTERNALDATABASES ---------------------------------------------------------*/
 
-.externaldb {
-    max-width: 400px;
-    margin: 10px auto;
-    padding: 16px;
+.externaldb-form {
+    margin-left: 8%;
+ 
 }
 
-.externaldb input{
-    color: #555;
-    text-align: center;
-    width: 70%;
-    padding: 3px 0px 3px 5px;
-    margin-top: 2px;
-    margin-right: 6px;
-    margin-bottom: 16px;
-    border: 1px solid #e5e5e5;
-    background: #fbfbfb;
-    height: 25px;
-    line-height:15px;
-    outline: 0;
-    -webkit-box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2);
-    box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2);
+.externaldb-form #string{
+    margin-left: 1%;
+    width: 90%;
 }
+
+
 
 .led-box {
-  height: 30px;
-  width: 25%;
-  margin: 10px 0;
+  height: 10px;
+  width: 10%;
+  margin-left: 45%;
+  margin-top: 1%;
 }
 
 .led-green {
   margin: 0 auto;
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   background-color: #ABFF00;
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #89FF00 0 2px 12px;
