--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -1313,8 +1313,8 @@ input {
 }
 
 .tooltip .tooltip-text-short {
-    width: 4em;
-    margin-left: -1em;
+    width: 6em;
+    margin-left: -1.05em;
 }
 
 .tooltip .tooltip-text-long {
@@ -1540,6 +1540,15 @@ input {
   background-color: #ABFF00;
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #89FF00 0 2px 12px;
+}
+
+.led-red {
+  margin: 0 auto;
+  width: 24px;
+  height: 24px;
+  background-color: #F00;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #441313 0 -1px 9px, rgba(255, 0, 0, 0.5) 0 2px 12px;
 }
 
 
