--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -355,6 +355,131 @@ input {
     background: url("../images/select.png") 95% / 16% no-repeat white;
 }
 
+/*-------------------------------------- SPINNER -------------------------------------------------------------------------*/
+
+.loader,
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+}
+.loader:before,
+.loader:after {
+  position: absolute;
+  content: '';
+}
+.loader:before {
+  width: 5.2em;
+  height: 10.2em;
+  background: white;
+  /*background: #0dc5c1;*/
+  border-radius: 10.2em 0 0 10.2em;
+  top: -0.1em;
+  left: -0.2em;
+  -webkit-transform-origin: 5.2em 5.1em;
+  transform-origin: 5.2em 5.1em;
+  -webkit-animation: load2 2s infinite ease 1.5s;
+  animation: load2 2s infinite ease 1.5s;
+}
+.loader {
+  /*color: #ffffff;*/
+  color: #333;
+  font-size: 11px;
+  text-indent: -99999em;
+  margin: 55px auto;
+  position: relative;
+  width: 10em;
+  height: 10em;
+  box-shadow: inset 0 0 0 1em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.loader:after {
+  width: 5.2em;
+  height: 10.2em;
+  background: white;
+  /*background: #0dc5c1;*/
+  border-radius: 0 10.2em 10.2em 0;
+  top: -0.1em;
+  left: 5.1em;
+  -webkit-transform-origin: 0px 5.1em;
+  transform-origin: 0px 5.1em;
+  -webkit-animation: load2 2s infinite ease;
+  animation: load2 2s infinite ease;
+}
+
+
+.loader-small,
+.loader-small:before,
+.loader-small:after {
+  border-radius: 50%;
+}
+.loader-small:before,
+.loader-small:after {
+  position: absolute;
+  content: '';
+}
+.loader-small:before {
+  width: 1.7em;
+  height: 3.2em;
+  background: white;
+  /*background: #0dc5c1;*/
+  border-radius: 1.7em 0 0 1.7em;
+  top: -0.1em;
+  left: -0.2em;
+  -webkit-transform-origin: 1.7em 1.6em;
+  transform-origin: 1.7em 1.6em;
+  -webkit-animation: load2 1s infinite ease 0.5s;
+  animation: load2 1s infinite ease 0.5s;
+}
+.loader-small {
+  /*color: #ffffff;*/
+  color: #333;
+  text-indent: -99999em;
+  position: relative;
+  width: 3em;
+  height: 3em;
+  box-shadow: inset 0 0 0 0.5em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.loader-small:after {
+  width: 1.7em;
+  height: 3.2em;
+  background: white;
+  /*background: #0dc5c1;*/
+  border-radius: 0 1.7em 1.7em 0;
+  top: -0.1em;
+  left: 1.5em;
+  -webkit-transform-origin: 0px 1.6em;
+  transform-origin: 0px 1.6em;
+  -webkit-animation: load2 1s infinite ease;
+  animation: load2 1s infinite ease;
+}
+
+@-webkit-keyframes load2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+
 /*---------------------------------------------------- HEADER ------------------------------------------------------------------*/
 #header {
     width: 100%;
@@ -1178,6 +1303,31 @@ input {
     border: 2px solid lightgrey;
 }
 
+#editor-errors {
+    width: 65%;
+    min-height: 8em;
+    max-height: 8em;
+    margin: auto;
+    margin-top: 1em;
+    padding-left: 2em;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    border: 1px solid lightgray;
+    background-color: white;
+    text-align: center;
+    box-shadow: black 1px 1px 4px;
+    overflow: scroll;
+}
+
+#editor-errors p {
+    font-family: Sans-serif;
+    text-align: left;
+    color: red;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+}
+
 @media (max-width: 1400px) {
     #editor-container {
         width: 80%;
@@ -1210,6 +1360,10 @@ input {
         -webkit-border-radius: 5px;
         border-radius: 5px;
         border: 2px solid lightgrey;
+    }
+    
+    #editor-errors {
+        width: 75%;
     }
 }
 
