--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -377,8 +377,8 @@ input {
   left: -0.2em;
   -webkit-transform-origin: 5.2em 5.1em;
   transform-origin: 5.2em 5.1em;
-  -webkit-animation: load2 2s infinite ease 1.5s;
-  animation: load2 2s infinite ease 1.5s;
+  -webkit-animation: load2 1.5s infinite ease 1s;
+  animation: load2 1.5s infinite ease 1s;
 }
 .loader {
   /*color: #ffffff;*/
@@ -404,8 +404,8 @@ input {
   left: 5.1em;
   -webkit-transform-origin: 0px 5.1em;
   transform-origin: 0px 5.1em;
-  -webkit-animation: load2 2s infinite ease;
-  animation: load2 2s infinite ease;
+  -webkit-animation: load2 1.5s infinite ease;
+  animation: load2 1.5s infinite ease;
 }
 
 
@@ -1317,11 +1317,11 @@ input {
     background-color: white;
     text-align: center;
     box-shadow: black 1px 1px 4px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 #editor-errors p {
-    font-family: Sans-serif;
+    font-family: 'Lucida Console';
     text-align: left;
     color: red;
     padding-top: 0.2em;
