--- a/MaaS/client/css/react-bootstrap-table.css
+++ b/MaaS/client/css/react-bootstrap-table.css
@@ -37,7 +37,7 @@ th {
 .table {
   width: 100%;
   max-width: 100%;
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
 }
 .table > thead > tr > th,
 .table > tbody > tr > th,
@@ -734,9 +734,9 @@ fieldset[disabled] .btn-default.focus {
   width: 100%;
 }
 
-.table-bordered {
-    border: 0px;
-}
+/*.table-bordered {*/
+/*    border: 0px;*/
+/*}*/
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
   border-bottom-width: 2px;
