--- a/MaaS/client/css/react-bootstrap-table.css
+++ b/MaaS/client/css/react-bootstrap-table.css
@@ -709,7 +709,7 @@ fieldset[disabled] .btn-default.focus {
 .react-bs-table table th {
   overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis;
+  /*text-overflow: ellipsis;*/
 }
 .react-bs-table {
   margin: 5px 10px 5px 10px;
