--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -1459,6 +1459,7 @@ input {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
+    width: 70% !important;
 }
 
 .document-table-view th, .document-table-view td {
