completata gestione errori in caso di compilazione DSL non presente

--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -1841,6 +1841,13 @@ input {
   box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #441313 0 -1px 9px, rgba(255, 0, 0, 0.5) 0 2px 12px;
 }
 
+.db-link {
+    cursor: pointer;
+}
+
+.db-link:hover {
+    color: #60D42E;
+}
 
 /*------------------------------------------------ SUPERADMIN ---------------------------------------------------------*/
 
