--- a/MaaS/server/views/dsl.ejs
+++ b/MaaS/server/views/dsl.ejs
@@ -1,20 +1,9 @@
 <div style="text-align: center; color: black;">
     <h1 style="font-size: 1.8em;">Data Sharing</h1>
     <p><%= sender %> decided to share with you this data from MaaS.</p>
-    <div style="padding: 2em;">
-        <a href="<%= downloadHref %>" style="margin: 1em;
-                                        padding: 1em 2em;
-                                        background-color: #333;
-                                        border-radius: 0.5em;
-                                        -webkit-box-shadow: 2px 2px 5px 0px #d3d3d3;
-                                        -moz-box-shadow:    2px 2px 5px 0px #d3d3d3;
-                                        box-shadow:         2px 2px 5px 0px #d3d3d3;
-                                        color: #90EE90;
-                                        text-decoration: none;
-                                        font-weight: bold">Download</a>
+    <div style="padding: 1em;">
+        <p style="font-weight: bold">Just open attachments of this message</p>
     </div>
-    <p>Or just open attachments of this message</p>
-    <p><%= downloadHref %></p>
     <p>If you don't want to see this data just ignore this email.</p>
     <p>MaaS team</p>
 </div>
