--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -2040,11 +2040,11 @@ input {
   box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #441313 0 -1px 9px, rgba(255, 0, 0, 0.5) 0 2px 12px;
 }
 
-.db-link {
+.table-link {
     cursor: pointer;
 }
 
-.db-link:hover {
+.table-link:hover {
     color: #60D42E;
 }
 
