--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -2076,6 +2076,7 @@ input {
 #current-dashboard i {
     vertical-align: middle;
     cursor: pointer;
+    font-size: 1.5em;
 }
 
 #current-dashboard i:hover {
