aggiornato il file macro

--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -1486,6 +1486,10 @@ input {
     margin: auto;
 }
 
+.inner-table th {
+    text-align: center;
+}
+
 .execute-popup {
     width: 82%;
     height: 80%;
