--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1440,7 +1440,7 @@ input {
 }
 
 .top-buttons .tooltip-text {
-    margin-left: -1.2em;
+    margin-left: -2em !important;
     margin-top: 0.5em;
 }
 
